--- a/sdv/processingtime/style.css
+++ b/sdv/processingtime/style.css
@@ -1,46 +1,12 @@
-html, body, input, button {
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.1rem;
-}
+@import url("../common.css");
 
-html, body {
+html, body, input, button {
+    font-size: 1.1rem;
 }
 
 #main {
     margin: auto;
     width: min(700px, 90%);
-}
-
-a {
-    font-weight: 600;
-}
-
-a:link {
-    color: rgb(0,127,255);
-}
-
-a:hover {
-    color: rgb(0,95,191);
-}
-
-a:visited, a:active {
-    color: rgb(0,63,159);
-}
-
-#charset {
-    width: 100%;
-    font-family: Inconsolata, Consolas, monospace;
-    font-size: 1rem;
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-}
-
-.warning {
-    color: red;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
 }
 
 input[type="text"], input[type="file"] {
