--- a/common.css
+++ b/common.css
@@ -2,12 +2,19 @@
 @import url("https://fonts.googleapis.com/css?family=Fira+Code&display=swap");
 
 html, body, .mainfont, :not(.other-font), :not(.monospace) {
-    font-family: 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', Arimo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-feature-settings: 'ss03', 'cv01', 'cv05', 'cv10', 'calt' off;
+    font-family: Inter, Tahoma, Verdana, sans-serif;
+    font-feature-settings: 'ss03', 'cv01', 'cv05', 'cv10', 'calt' on;
 }
 
-.enable-calt {
-    font-feature-settings: 'calt' on !important;
+@supports (font-variation-settings: normal) {
+    html, body, .mainfont, :not(.other-font), :not(.monospace) {
+        font-family: 'Inter var', Tahoma, Verdana, sans-serif;
+    }
+    color: red;
+}
+
+.disable-calt {
+    font-feature-settings: 'calt' off !important;
 }
 
 .other-font {
@@ -55,4 +62,8 @@ p, input, textarea {
     -moz-user-select: text;
     -ms-user-select: text;
     user-select: text;
+}
+
+a {
+    cursor: pointer;
 }
