--- a/common.css
+++ b/common.css
@@ -1,14 +1,14 @@
 @import url("https://rsms.me/inter/inter.css");
-@import url("https://fonts.googleapis.com/css?family=Fira+Code&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Fira+Mono&display=swap");
 
 html, body, .mainfont, :not(.other-font), :not(.monospace) {
-    font-family: Inter, Tahoma, Verdana, sans-serif;
+    font-family: Inter, Tahoma, Verdana, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-feature-settings: 'ss03', 'cv01', 'cv05', 'cv10', 'calt' on;
 }
 
 @supports (font-variation-settings: normal) {
     html, body, .mainfont, :not(.other-font), :not(.monospace) {
-        font-family: 'Inter var', Tahoma, Verdana, sans-serif;
+        font-family: 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 }
 
@@ -21,7 +21,7 @@ html, body, .mainfont, :not(.other-font), :not(.monospace) {
 }
 
 .monospace {
-    font-family: 'Fira Code', Inconsolata, Consolas, monospace;
+    font-family: 'Fira Mono', Inconsolata, Consolas, monospace;
     font-feature-settings: unset !important;
 }
 
